--- a/conf/log4j.shuffle_server.properties
+++ b/conf/log4j.shuffle_server.properties
@@ -22,7 +22,7 @@ log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 log4j.appender.RollingAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.RollingAppender.File=./logs/rss.log
+log4j.appender.RollingAppender.File=./logs/shuffle_server.log
 log4j.appender.RollingAppender.MaxFileSize=50MB
 log4j.appender.RollingAppender.MaxBackupIndex=10
 log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
