--- a/common/pom.xml
+++ b/common/pom.xml
@@ -94,6 +94,11 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-minicluster</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.luben</groupId>
+      <artifactId>zstd-jni</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
