--- a/rust/experimental/server/Cargo.toml
+++ b/rust/experimental/server/Cargo.toml
@@ -94,6 +94,7 @@ console-subscriber = "0.1.9"
 pin-project-lite = "0.2.8"
 signal-hook = "0.3.17"
 clap = "3.0.14"
+parking_lot = "0.12.1"
 
 [dependencies.hdrs]
 version = "0.3.0"
