--- a/rust/experimental/server/Cargo.toml
+++ b/rust/experimental/server/Cargo.toml
@@ -95,6 +95,7 @@ pin-project-lite = "0.2.8"
 signal-hook = "0.3.17"
 clap = "3.0.14"
 socket2 = { version="0.4", features = ["all"]}
+parking_lot = "0.12.1"
 
 [dependencies.hdrs]
 version = "0.3.0"
