[#960][part-3] feat(dashboard): Provides a start-stop script for the dashboard. (#1056)
### What changes were proposed in this pull request?
Provides a start-stop script for the dashboard.

### Why are the changes needed?

Fix: https://github.com/apache/incubator-uniffle/issues/960

### Does this PR introduce any user-facing change?
Start and close the dashboard module using shell scripts.

### How was this patch tested?
UT.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -146,6 +146,10 @@
       <artifactId>jetty-util</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-proxy</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.hbase.thirdparty</groupId>
       <artifactId>hbase-shaded-jersey</artifactId>
     </dependency>
