--- a/dashboard/pom.xml
+++ b/dashboard/pom.xml
@@ -89,6 +89,7 @@
                 </executions>
                 <configuration>
                     <workingDirectory>src/main/webapp</workingDirectory>
+                    <npmRegistryURL>http://jfrog.cloud.qiyi.domain:80/api/npm/npm/</npmRegistryURL>
                 </configuration>
             </plugin>
         </plugins>
