[#1385] improvement: Improve log4j appender layout pattern (#1386)
### What changes were proposed in this pull request?

Improve the log4j appender layout pattern, by adding the full logger name and code line number.

### Why are the changes needed?

For [#1385](https://github.com/apache/incubator-uniffle/issues/1385)

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

By running the process successfully and check the log4j output.

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -20,10 +20,10 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Threshold=INFO
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+log4j.appender.console.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%t] [%p] %c{1}.%M - %m%n
 log4j.appender.RollingAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.RollingAppender.File=${log.path}
-log4j.appender.RollingAppender.MaxFileSize=50MB
+log4j.appender.RollingAppender.MaxFileSize=2GB
 log4j.appender.RollingAppender.MaxBackupIndex=10
 log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RollingAppender.layout.ConversionPattern=[%p] %d %t %c{1} %M - %m%n
+log4j.appender.RollingAppender.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%t] [%p] %c{1}.%M - %m%n
