--- a/client-spark/common/pom.xml
+++ b/client-spark/common/pom.xml
@@ -24,12 +24,12 @@
     <parent>
         <artifactId>uniffle-parent</artifactId>
         <groupId>org.apache.uniffle</groupId>
-        <version>0.10.0-SNAPSHOT</version>
+        <version>0.10.99</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>rss-client-spark-common</artifactId>
-    <version>0.10.0-SNAPSHOT</version>
+    <version>0.10.99</version>
     <packaging>jar</packaging>
     <name>Apache Uniffle Client (Spark Common)</name>
 
